# loan_app

./: Makefile  README.md  model_performance.txt  pyproject.toml  sample.py
Building a Predictive Model with PySpark and MLlib/: output.txt
loan_app/: __init__.py  dataset.py  features.py  loan_app.py  loan_app1.py  loan_app_final_1.py  loan_predict_pyspark.py  plots.py
loan_app/modeling/: predict.py  train.py
notebooks/: 00_Initial_EDA.py  01_split_data_imputation.py  02_feature_engineering_encoding.py  03_Baseline_LogisticRegression.py  04_Model-2_DecisionTree.py  05_Model-3_RandomForest.py
notebooks/__marimo__/: 00_Initial_EDA.ipynb  01_split_data_imputation.ipynb  02_feature_engineering_encoding.ipynb
notebooks/__marimo__/session/: 00_Initail_EDA.py.json
